tests/samples/compile_errors/statement_placement/declare_inside_sub.bas
Attribute VB_Name = "M"
Option Explicit

Sub S()
    Declare PtrSafe Function GetTickCount Lib "kernel32" () As Long
End Sub
